--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="images/logo roxa sem fundo.png" alt="Logo do portfolio" height="180px" width="180px">
+                    <img src="images/logo_cortada.png" alt="Logo do portfolio" height="180px" width="180px">
                 </a>
             </div><!--logotipo-->
             <nav class="menu-desktop">
