--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="images/logo_cortada.png" alt="Logo do portfolio" height="180px" width="180px">
+                    <img src="images/logo_cortada.png" alt="Logo do portfolio" height="100px" width="140px">
                 </a>
             </div><!--logotipo-->
             <nav class="menu-desktop">
@@ -209,7 +209,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="images/logo_cortada.png" alt="Logo do portfolio" height="100px" width="150px">
+                        <img src="images/logo_cortada.png" alt="Logo do portfolio" height="100px" width="140px">
                     </div><!--logo-footer-->
                     
                     <div class="btn-social">
@@ -226,7 +226,7 @@
             </div><!--line-footer-->
             
             <div class="line-footer borda">
-                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:teste@hotmail.com">teste@hotmail.com</a></p>
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:luigibiagantonioli@gmail.com">luigibiagantonioli@gmail.com</a></p>
             </div><!--line-footer-->
         </div><!--interface-->
     </footer>
